--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -40,6 +40,7 @@ jobs:
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_details: lines, bytes-size, percentage
+          plugin_languages_indepth: yes
           plugin_languages_limit: 8
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 14
