--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -30,9 +30,10 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Tokyo
           plugin_achievements: yes
-          plugin_achievements_display: detailed
+          plugin_achievements_display: compact
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
+          plugin_fortune: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
@@ -53,6 +54,7 @@ jobs:
           plugin_people_types: followers, following
           plugin_repositories: yes
           plugin_repositories_order: featured, pinned, starred, random
+          plugin_repositories_pinned: 2
           plugin_topics: yes
           plugin_topics_limit: 15
           plugin_topics_mode: icons
