--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -52,6 +52,9 @@ jobs:
           plugin_people_limit: 24
           plugin_people_size: 28
           plugin_people_types: followers, following
+          plugin_pagespeed: yes
+          plugin_pagespeed_screenshot: yes
+          plugin_pagespeed_url: Jikky1618.github.io
           plugin_repositories: yes
           plugin_repositories_order: featured, pinned, starred, random
           plugin_repositories_pinned: 2
